remise en forme de tous les articles

--- a/html/Animals_and_Quiz/DevilsHolePupFish.html
+++ b/html/Animals_and_Quiz/DevilsHolePupFish.html
@@ -27,14 +27,15 @@
 
             <div class="video-container">
                 <video controls width="100%">
-                    <source src="../../videos/Devils hole pupfish.mp4" type="video/mp4" alt="Red panda video">
+                    <source src="../../videos/Devils hole pupfish.mp4" type="video/mp4" alt="Devils hole pupfish video">
                 </video>
             </div>
 
             <div class="audio-container">
                 <h2>What sound does the devils hole pupfish make ?</h2>
                 <audio controls>
-                    <source src="../../audios/devils hole pupfish.mp3" type="audio/mpeg" alt="Red panda audio">
+                    <source src="../../audios/devils hole pupfish.mp3" type="audio/mpeg"
+                        alt="Devils hole pupfish audio">
                 </audio>
             </div>
 
@@ -45,48 +46,65 @@
                         The Devils Hole pupfish (Cyprinodon diabolis) is one of the rarest and most geographically
                         restricted fish species on Earth. Found only in a single water-filled cavern in the Nevada
                         desert known as Devils Hole, this tiny fish has become a symbol of resilience and the urgent
-                        need for conservation.<br>
+                        need for conservation.
+                    </p><br>
 
                     <ul>
-                        <li>Physical appearance:<br>
-                            Measuring less than 2.5 centimeters (1 inch) long, the Devils Hole pupfish is a small,
-                            iridescent-blue fish with a short, stocky body and large eyes. Males display a brighter,
-                            shimmering blue color during the breeding season, while females are generally more subdued
-                            in hue. Despite their modest appearance, their rarity makes them biologically and
-                            scientifically significant.
+                        <li><strong>Physical appearance:</strong>
+                            <p>
+                                Measuring less than 2.5 centimeters (1 inch) long, the Devils Hole pupfish is a small,
+                                iridescent-blue fish with a short, stocky body and large eyes. Males display a brighter,
+                                shimmering blue color during the breeding season, while females are generally more
+                                subdued
+                                in hue. Despite their modest appearance, their rarity makes them biologically and
+                                scientifically significant.
+                            </p>
                         </li><br>
 
-                        <li>Habitat and behavior:<br>
-                            Devils Hole is a deep, geothermal pool located within a limestone cavern in Death Valley
-                            National Park. With temperatures around 33°C (91°F) and extremely low oxygen levels, the
-                            environment is harsh and unique. The pupfish depend on a shallow rock shelf within the pool
-                            for feeding and spawning, where algae grow and provide their primary food source.
+                        <li><strong>Habitat and behavior:</strong>
+                            <p>
+                                Devils Hole is a deep, geothermal pool located within a limestone cavern in Death Valley
+                                National Park. With temperatures around 33°C (91°F) and extremely low oxygen levels, the
+                                environment is harsh and unique. The pupfish depend on a shallow rock shelf within the
+                                pool
+                                for feeding and spawning, where algae grow and provide their primary food source.
+                            </p>
                         </li><br>
 
-                        <li>Reproduction and social life:<br>
-                            These fish exhibit simple reproductive behaviors, laying their eggs among algae on the
-                            shallow shelf. Because of the limited space and resources, their population naturally
-                            remains small. Devils Hole pupfish have adapted to survive in this extreme environment, with
-                            slower metabolism and a high tolerance for heat and low oxygen.
+                        <li><strong>Reproduction and social life:</strong>
+                            <p>
+                                These fish exhibit simple reproductive behaviors, laying their eggs among algae on the
+                                shallow shelf. Because of the limited space and resources, their population naturally
+                                remains small. Devils Hole pupfish have adapted to survive in this extreme environment,
+                                with
+                                slower metabolism and a high tolerance for heat and low oxygen.
+                            </p>
                         </li><br>
 
-                        <li>Conservation status:<br>
-                            The Devils Hole pupfish is listed as Critically Endangered by the IUCN. Their population has
-                            fluctuated dramatically, once dipping below 40 individuals. Threats include groundwater
-                            depletion, human disturbance, and natural fluctuations in water conditions. Intensive
-                            conservation efforts—such as captive breeding, habitat monitoring, and water management—are
-                            ongoing to ensure the species’ survival.
+                        <li><strong>Conservation status:</strong>
+                            <p>
+                                The Devils Hole pupfish is listed as Critically Endangered by the IUCN. Their population
+                                has
+                                fluctuated dramatically, once dipping below 40 individuals. Threats include groundwater
+                                depletion, human disturbance, and natural fluctuations in water conditions. Intensive
+                                conservation efforts such as captive breeding, habitat monitoring, and water
+                                management are
+                                ongoing to ensure the species’ survival.
+                            </p>
                         </li><br>
                     </ul>
 
 
                     <strong>Conclusion:</strong>
-                    Though small in size, the Devils Hole pupfish plays a big role in the story of conservation.
-                    Protecting this extraordinary species means preserving a one-of-a-kind habitat and reminding
-                    ourselves of the delicate balance between life and environment. With continued research, protection,
-                    and respect for natures boundaries, we can help ensure the Devils Hole pupfish survives for
-                    generations to come.
+                    <p>
+                        Though small in size, the Devils Hole pupfish plays a big role in the story of conservation.
+                        Protecting this extraordinary species means preserving a one-of-a-kind habitat and reminding
+                        ourselves of the delicate balance between life and environment. With continued research,
+                        protection,
+                        and respect for natures boundaries, we can help ensure the Devils Hole pupfish survives for
+                        generations to come.
                     </p>
+
                 </div>
 
                 <div class="article">
@@ -94,49 +112,68 @@
                     <p>
                         The Devils Hole pupfish may be one of the most endangered fish species in the world, but with
                         the right actions, we can contribute to its survival. This remarkable species depends on a
-                        single, fragile habitat—and protecting it requires dedication, awareness, and long-term
+                        single, fragile habitat, and protecting it requires dedication, awareness, and long-term
                         commitment.
+                    </p><br>
 
                     <ol>
-                        <li>Preserve groundwater resources:<br>
-                            The Devils Hole ecosystem is sustained by an underground aquifer. Excessive groundwater
-                            pumping for agriculture or development can lower water levels and threaten the pupfish's
-                            only habitat. Supporting sustainable water use policies and advocating for aquifer
-                            protection helps safeguard their environment.
+                        <li><strong>Preserve groundwater resources:</strong>
+                            <p>
+                                The Devils Hole ecosystem is sustained by an underground aquifer. Excessive groundwater
+                                pumping for agriculture or development can lower water levels and threaten the pupfish's
+                                only habitat. Supporting sustainable water use policies and advocating for aquifer
+                                protection helps safeguard their environment.
+                            </p>
                         </li><br>
 
                         <li>
-                            Support conservation programs:<br>
-                            Federal agencies and research institutions have established monitoring and captive breeding
-                            efforts to prevent extinction. Donating to or volunteering with organizations that focus on
-                            desert ecology or endangered species protection contributes to these vital initiatives.
+                            <strong>Support conservation programs:</strong>
+                            <p>
+                                Federal agencies and research institutions have established monitoring and captive
+                                breeding
+                                efforts to prevent extinction. Donating to or volunteering with organizations that focus
+                                on
+                                desert ecology or endangered species protection contributes to these vital initiatives.
+                            </p>
                         </li><br>
 
                         <li>
-                            Respect protected areas:<br>
-                            Devils Hole is part of a federally protected wildlife refuge. Visitors should always follow
-                            park guidelines, respect barriers, and avoid disturbing the area. Even minor disturbances
-                            can have major impacts on this delicate ecosystem.
+                            <strong>Respect protected areas:</strong>
+                            <p>
+                                Devils Hole is part of a federally protected wildlife refuge. Visitors should always
+                                follow
+                                park guidelines, respect barriers, and avoid disturbing the area. Even minor
+                                disturbances
+                                can have major impacts on this delicate ecosystem.
+                            </p>
                         </li><br>
 
                         <li>
-                            Educate and inform others:<br>
-                            Raising awareness about the Devils Hole pupfish highlights the broader importance of
-                            biodiversity and habitat conservation. Sharing their story—especially their fight for
-                            survival against the odds—can inspire support for other species at risk.
+                            <strong>Educate and inform others:</strong>
+                            <p>
+                                Raising awareness about the Devils Hole pupfish highlights the broader importance of
+                                biodiversity and habitat conservation. Sharing their story, especially their fight for
+                                survival against the odds, can inspire support for other species at risk.
+                            </p>
                         </li><br>
 
                         <li>
-                            Promote responsible environmental choices:<br>
-                            Even if you live far from Nevada, your actions can still affect ecosystems like Devils Hole.
-                            Reducing your water use, minimizing pollution, and supporting eco-friendly legislation all
-                            contribute to a healthier planet and more secure habitats for species like the pupfish.
+                            <strong>Promote responsible environmental choices:</strong>
+                            <p>
+                                Even if you live far from Nevada, your actions can still affect ecosystems like Devils
+                                Hole.
+                                Reducing your water use, minimizing pollution, and supporting eco-friendly legislation
+                                all
+                                contribute to a healthier planet and more secure habitats for species like the pupfish.
+                            </p>
                         </li><br>
                     </ol>
-                    <strong>Conclusion:</strong><br>
-                    Saving the Devils Hole pupfish is a shared responsibility. By preserving their habitat, supporting
-                    conservation efforts, and raising awareness, we can all help ensure this resilient little fish
-                    continues to survive in the heart of the desert for generations to come.
+                    <strong>Conclusion:</strong>
+                    <p>
+                        Saving the Devils Hole pupfish is a shared responsibility. By preserving their habitat,
+                        supporting
+                        conservation efforts, and raising awareness, we can all help ensure this resilient little fish
+                        continues to survive in the heart of the desert for generations to come.
                     </p>
                 </div>
             </div>
