--- a/html/Animals_and_Quiz/MandarinFish.html
+++ b/html/Animals_and_Quiz/MandarinFish.html
@@ -27,14 +27,14 @@
 
             <div class="video-container">
                 <video controls width="100%">
-                    <source src="../../videos/Mandarin Dragonet.mp4" type="video/mp4" alt="Red panda video">
+                    <source src="../../videos/Mandarin Dragonet.mp4" type="video/mp4" alt="Mandarin fish video">
                 </video>
             </div>
 
             <div class="audio-container">
                 <h2>What sound does the mandarin fish make ?</h2>
                 <audio controls>
-                    <source src="../../audios/Mandarin_Dragonet.mp3" type="audio/mpeg" alt="Red panda audio">
+                    <source src="../../audios/Mandarin_Dragonet.mp3" type="audio/mpeg" alt="Mandarin fish audio">
                 </audio>
             </div>
 
@@ -45,44 +45,61 @@
                         The mandarin fish (Synchiropus splendidus) is a small, brightly colored marine species found in
                         the warm, shallow waters of the Pacific Ocean, particularly in coral reefs of the Philippines,
                         Indonesia, and Australia. Its dazzling coloration and graceful movement make it one of the most
-                        visually stunning fish in the ocean.<br>
+                        visually stunning fish in the ocean.
+                    </p><br>
 
                     <ul>
-                        <li>Physical appearance:<br>
-                            Mandarin fish are best known for their striking appearance. They display a vivid palette of
-                            electric blues, oranges, and greens arranged in swirling patterns across their small,
-                            elongated bodies, which typically measure only 6 to 8 centimeters (2.4 to 3.1 inches) in
-                            length. Unlike most fish, their coloration comes not from pigments but from cellular
-                            structures that reflect light—a trait shared with few other species.
+                        <li><strong>Physical appearance:</strong>
+                            <p>
+                                Mandarin fish are best known for their striking appearance. They display a vivid palette
+                                of
+                                electric blues, oranges, and greens arranged in swirling patterns across their small,
+                                elongated bodies, which typically measure only 6 to 8 centimeters (2.4 to 3.1 inches) in
+                                length. Unlike most fish, their coloration comes not from pigments but from cellular
+                                structures that reflect light, a trait shared with few other species.
+                            </p>
                         </li><br>
 
-                        <li>Diet and behavior:<br>
-                            These fish are carnivorous and feed on tiny crustaceans and other small invertebrates they
-                            find among rocks and coral. Mandarin fish are slow, deliberate swimmers and rely on their
-                            excellent camouflage to avoid predators. They use their pelvic fins like feet to "walk"
-                            across the seafloor as they forage.
+                        <li><strong>Diet and behavior:</strong>
+                            <p>
+                                These fish are carnivorous and feed on tiny crustaceans and other small invertebrates
+                                they
+                                find among rocks and coral. Mandarin fish are slow, deliberate swimmers and rely on
+                                their
+                                excellent camouflage to avoid predators. They use their pelvic fins like feet to "walk"
+                                across the seafloor as they forage.
+                            </p>
                         </li><br>
 
-                        <li>Reproduction and social life:<br>
-                            Mandarin fish are known for their fascinating mating rituals. At dusk, males perform
-                            elaborate courtship displays to attract females. Once a pair forms, they rise together above
-                            the reef to spawn, releasing eggs and sperm into the water in a synchronized dance. Outside
-                            of breeding, mandarin fish are often solitary or found in small groups.
+                        <li><strong>Reproduction and social life:</strong>
+                            <p>
+                                Mandarin fish are known for their fascinating mating rituals. At dusk, males perform
+                                elaborate courtship displays to attract females. Once a pair forms, they rise together
+                                above
+                                the reef to spawn, releasing eggs and sperm into the water in a synchronized dance.
+                                Outside
+                                of breeding, mandarin fish are often solitary or found in small groups.
+                            </p>
                         </li><br>
 
-                        <li>Conservation status:<br>
-                            Currently, mandarin fish are not listed as endangered, but they face threats from habitat
-                            degradation and overcollection for the aquarium trade. Because of their beauty, they are
-                            highly sought after by hobbyists, which can put local populations at risk if not sourced
-                            responsibly.
+                        <li><strong>Conservation status:</strong>
+                            <p>
+                                Currently, mandarin fish are not listed as endangered, but they face threats from
+                                habitat
+                                degradation and overcollection for the aquarium trade. Because of their beauty, they are
+                                highly sought after by hobbyists, which can put local populations at risk if not sourced
+                                responsibly.
+                            </p>
                         </li><br>
                     </ul>
 
 
                     <strong>Conclusion:</strong>
-                    With their vivid colors and delicate beauty, mandarin fish captivate ocean lovers around the world.
-                    Conservation efforts are essential to protect their reef habitats and ensure their survival for
-                    generations to come.
+                    <p>
+                        With their vivid colors and delicate beauty, mandarin fish captivate ocean lovers around the
+                        world.
+                        Conservation efforts are essential to protect their reef habitats and ensure their survival for
+                        generations to come.
                     </p>
                 </div>
 
@@ -91,45 +108,64 @@
                     <p>
                         Though not yet endangered, the mandarin fish's future depends on our ability to protect coral
                         reef ecosystems and promote sustainable practices. Here's how we can support their survival:
+                    </p><br>
 
                     <ol>
-                        <li>Protect coral reefs:<br>
-                            Mandarin fish rely on healthy reefs for shelter and food. Coral reefs are under threat from
-                            climate change, pollution, and destructive fishing practices. Supporting marine conservation
-                            areas and organizations that work to restore reef habitats is vital.
+                        <li><strong>Protect coral reefs:</strong>
+                            <p>
+                                Mandarin fish rely on healthy reefs for shelter and food. Coral reefs are under threat
+                                from
+                                climate change, pollution, and destructive fishing practices. Supporting marine
+                                conservation
+                                areas and organizations that work to restore reef habitats is vital.
+                            </p>
                         </li><br>
 
                         <li>
-                            Choose sustainable aquariums:<br>
-                            If you keep marine fish, ensure your aquarium only sources mandarin fish from captive
-                            breeding programs or sustainable wild collection practices. Avoid supporting the illegal or
-                            unregulated trade in reef fish.
+                            <strong>Choose sustainable aquariums:</strong>
+                            <p>
+                                If you keep marine fish, ensure your aquarium only sources mandarin fish from captive
+                                breeding programs or sustainable wild collection practices. Avoid supporting the illegal
+                                or
+                                unregulated trade in reef fish.
+                            </p>
                         </li><br>
 
                         <li>
-                            Reduce your carbon footprint:<br>
-                            Climate change leads to ocean warming and coral bleaching—both deadly to reef ecosystems.
-                            Reducing your carbon emissions by using energy-efficient products, supporting renewable
-                            energy, and cutting unnecessary travel helps protect marine life.
+                            <strong>Reduce your carbon footprint:</strong>
+                            <p>
+                                Climate change leads to ocean warming and coral bleaching—both deadly to reef
+                                ecosystems.
+                                Reducing your carbon emissions by using energy-efficient products, supporting renewable
+                                energy, and cutting unnecessary travel helps protect marine life.
+                            </p>
                         </li><br>
 
                         <li>
-                            Avoid harmful chemicals:<br>
-                            Many sunscreens contain chemicals that can harm coral reefs. Choose reef-safe sunscreen and
-                            avoid dumping pollutants down the drain, which may end up in marine environments.
+                            <strong>Avoid harmful chemicals:</strong>
+                            <p>
+                                Many sunscreens contain chemicals that can harm coral reefs. Choose reef-safe sunscreen
+                                and
+                                avoid dumping pollutants down the drain, which may end up in marine environments.
+                            </p>
                         </li><br>
 
                         <li>
-                            Raise awareness:<br>
-                            Mandarin fish can serve as a colorful ambassador for reef conservation. Sharing their story,
-                            especially with younger generations, can help build support for protecting the rich
-                            biodiversity of our oceans.
+                            <strong>Raise awareness:</strong>
+                            <p>
+                                Mandarin fish can serve as a colorful ambassador for reef conservation. Sharing their
+                                story,
+                                especially with younger generations, can help build support for protecting the rich
+                                biodiversity of our oceans.
+                            </p>
                         </li><br>
                     </ol>
-                    <strong>Conclusion:</strong><br>
-                    Protecting the mandarin fish is a shared responsibility. Through marine conservation, sustainable
-                    aquarium practices, and raising awareness about reef preservation, we can all help ensure this
-                    stunning species continues to thrive in our oceans for generations to come.
+                    <strong>Conclusion:</strong>
+                    <p>
+                        Protecting the mandarin fish is a shared responsibility. Through marine conservation,
+                        sustainable
+                        aquarium practices, and raising awareness about reef preservation, we can all help ensure this
+                        stunning species continues to thrive in our oceans for generations to come.
                     </p>
                 </div>
             </div>
