--- a/html/Animals_and_Quiz/pandido.html
+++ b/html/Animals_and_Quiz/pandido.html
@@ -46,41 +46,62 @@
                         and southwestern China. Despite its name, the red panda is not closely related to the giant
                         panda. In fact, it belongs to its own unique family, Ailuridae, making it a distinct species
                         with fascinating characteristics.<br>
+                    </p><br>
 
                     <ul>
-                        <li>Physical appearance:<br>
-                            Red pandas are easily recognizable by their rust-colored fur, bushy ringed tails, and masked
-                            faces that resemble those of raccoons. They have a compact body measuring around 50 to 65
-                            centimeters (20 to 26 inches) long, with an equally long tail used for balance and warmth.
-                            Their
-                            thick fur not only gives them a charming look but also insulates them against cold mountain
-                            temperatures.
+                        <li>
+                            <strong>Physical appearance:</strong>
+                            <p>
+                                Red pandas are easily recognizable by their rust-colored fur, bushy ringed tails, and
+                                masked
+                                faces that resemble those of raccoons. They have a compact body measuring around 50 to
+                                65
+                                centimeters (20 to 26 inches) long, with an equally long tail used for balance and
+                                warmth.
+                                Their
+                                thick fur not only gives them a charming look but also insulates them against cold
+                                mountain
+                                temperatures.
+                            </p>
                         </li><br>
 
-                        <li>Diet and behavior:<br>
-                            Primarily herbivorous, red pandas feed mostly on bamboo leaves and shoots, although they may
-                            also eat fruits, berries, acorns, and occasionally small insects or bird eggs. Unlike giant
-                            pandas, red pandas are more agile climbers, using their sharp claws and strong limbs to move
-                            among trees where they spend most of their time.
+                        <li><strong>Diet and behavior:</strong>
+                            <p>
+                                Primarily herbivorous, red pandas feed mostly on bamboo leaves and shoots, although they
+                                may
+                                also eat fruits, berries, acorns, and occasionally small insects or bird eggs. Unlike
+                                giant
+                                pandas, red pandas are more agile climbers, using their sharp claws and strong limbs to
+                                move
+                                among trees where they spend most of their time.
+                            </p>
                         </li><br>
 
-                        <li>Activity and social life:<br>
-                            These animals are generally solitary and crepuscular, meaning they are most active during
-                            dawn
-                            and dusk. They communicate through body language, scent markings, and soft vocalizations.
+                        <li><strong>Activity and social life:</strong>
+                            <p>
+                                These animals are generally solitary and crepuscular, meaning they are most active
+                                during
+                                dawn
+                                and dusk. They communicate through body language, scent markings, and soft
+                                vocalizations.
+                            </p>
                         </li><br>
 
-                        <li>Conservation status:<br>
-                            The red panda is classified as Endangered by the IUCN due to habitat loss, poaching, and
-                            fragmentation. It is estimated that fewer than 10,000 mature individuals remain in the wild.
+                        <li>
+                            <strong>Conservation status:</strong>
+                            <p>
+                                The red panda is classified as Endangered by the IUCN due to habitat loss, poaching, and
+                                fragmentation. It is estimated that fewer than 10,000 mature individuals remain in the
+                                wild.
+                            </p>
                         </li><br>
                     </ul>
 
-
                     <strong>Conclusion:</strong>
-                    With their unique appearance and gentle nature, red pandas are beloved around the world.
-                    Conservation efforts continue to protect their habitats and ensure their survival for
-                    generations to come.
+                    <p>
+                        With their unique appearance and gentle nature, red pandas are beloved around the world.
+                        Conservation efforts continue to protect their habitats and ensure their survival for
+                        generations to come.
                     </p>
                 </div>
 
@@ -91,54 +112,72 @@
                         currently listed as Endangered. With fewer than 10,000 individuals left in the wild, urgent
                         action is needed to protect this unique species from extinction. Fortunately, there are several
                         ways we can help.
+                    </p><br>
 
                     <ol>
                         <li>
-                            Preserve their habitat:<br>
-                            Red pandas rely on dense forests with plenty of bamboo to survive. One of the biggest
-                            threats
-                            they face is deforestation due to logging, agriculture, and human development. Supporting
-                            reforestation projects and protected areas helps maintain the natural environments red
-                            pandas
-                            need.
+                            <strong>Preserve their habitat:</strong>
+                            <p>
+                                Red pandas rely on dense forests with plenty of bamboo to survive. One of the biggest
+                                threats
+                                they face is deforestation due to logging, agriculture, and human development.
+                                Supporting
+                                reforestation projects and protected areas helps maintain the natural environments red
+                                pandas
+                                need.
+                            </p>
                         </li><br>
 
                         <li>
-                            Support conservation organizations:<br>
-                            Many non-profit groups, such as the Red Panda Network, work directly in red panda habitats
-                            to
-                            monitor populations, train forest guardians, and educate local communities. Donating to or
-                            volunteering with these organizations can have a real impact.
+                            <strong>Support conservation organizations:</strong>
+                            <p>
+                                Many non-profit groups, such as the Red Panda Network, work directly in red panda
+                                habitats
+                                to
+                                monitor populations, train forest guardians, and educate local communities. Donating to
+                                or
+                                volunteering with these organizations can have a real impact.
+                            </p>
                         </li><br>
 
                         <li>
-                            Raise awareness:<br>
-                            Educating others about red pandas and the threats they face is a simple but powerful tool.
-                            Sharing information on social media, hosting awareness events, or supporting educational
-                            programs can help more people care about the cause.
+                            <strong>Raise awareness:</strong>
+                            <p>
+                                Educating others about red pandas and the threats they face is a simple but powerful
+                                tool.
+                                Sharing information on social media, hosting awareness events, or supporting educational
+                                programs can help more people care about the cause.
+                            </p>
                         </li><br>
 
                         <li>
-                            Choose sustainable products:<br>
-                            Avoiding products linked to deforestation—such as unsustainable palm oil or paper—can help
-                            reduce pressure on the forests red pandas call home. Look for eco-friendly certifications
-                            like
-                            FSC (Forest Stewardship Council) when shopping.
+                            <strong>Choose sustainable products:</strong>
+                            <p>
+                                Avoiding products linked to deforestation such as unsustainable palm oil or paper, can
+                                help
+                                reduce pressure on the forests red pandas call home. Look for eco-friendly
+                                certifications
+                                like
+                                FSC (Forest Stewardship Council) when shopping.
+                            </p>
                         </li><br>
 
                         <li>
-                            Responsible ecotourism:<br>
-                            When traveling, choose eco-tourism providers that support wildlife conservation and operate
-                            ethically. Tourism that respects natural habitats can bring income to local communities
-                            while
-                            encouraging the protection of wildlife.
+                            <strong>Responsible ecotourism:</strong>
+                            <p>
+                                When traveling, choose eco-tourism providers that support wildlife conservation and
+                                operate
+                                ethically. Tourism that respects natural habitats can bring income to local communities
+                                while
+                                encouraging the protection of wildlife.
+                            </p>
                         </li><br>
                     </ol>
-                    <strong>Conclusion:</strong><br>
-                    Saving the red panda is a shared responsibility. Through education, support for conservation
-                    efforts, and making environmentally conscious choices, we can all contribute to ensuring this
-                    wonderful species thrives in the wild for years to come.
-
+                    <strong>Conclusion:</strong>
+                    <p>
+                        Saving the red panda is a shared responsibility. Through education, support for conservation
+                        efforts, and making environmentally conscious choices, we can all contribute to ensuring this
+                        wonderful species thrives in the wild for years to come.
                     </p>
                 </div>
             </div>
