--- a/html/Animals_and_Quiz/turtle.html
+++ b/html/Animals_and_Quiz/turtle.html
@@ -35,7 +35,8 @@
                 <h2>What sound does the Roti Island snake-necked turtle make ?</h2>
 
                 <audio controls>
-                    <source src="../../audios/Giant Snake-necked Turtle.mp3" type="audio/mpeg" alt="Roti Island snake-necked turtle audio">
+                    <source src="../../audios/Giant Snake-necked Turtle.mp3" type="audio/mpeg"
+                        alt="Roti Island snake-necked turtle audio">
                 </audio>
             </div>
 
@@ -46,38 +47,50 @@
                         The Roti Island snake-necked turtle (Chelodina mccordi) is one of the most unique and critically
                         endangered turtles in the world. Native only to Roti Island in Indonesia, this freshwater turtle
                         is known for its extraordinarily long neck, which can be as long as its shell.
+                    </p><br>
 
 
                     <ul>
-                        <li>Physical appearance:<br>
-                            This turtle has a dark brown to black carapace (upper shell) and a pale-colored plastron
-                            (underbelly). Its most striking feature is its snake-like neck, which it uses to strike at
-                            prey
-                            with lightning speed. When threatened, it bends its neck sideways under its shell instead of
-                            pulling it straight back like most turtles.
-                        </li>
+                        <li><strong>Physical appearance:</strong>
+                            <p>
+                                This turtle has a dark brown to black carapace (upper shell) and a pale-colored plastron
+                                (underbelly). Its most striking feature is its snake-like neck, which it uses to strike
+                                at
+                                prey with lightning speed. When threatened, it bends its neck sideways under its shell
+                                instead of
+                                pulling it straight back like most turtles.
+                            </p>
 
-                        <li>Habitat and behavior:<br>
-                            The Roti Island snake-necked turtle lives in small freshwater swamps and ponds. It is
-                            carnivorous, feeding on fish, insects, and small invertebrates. Unlike many other turtles,
-                            it is
-                            not a strong swimmer and prefers calm, shallow waters where it can walk along the bottom.
-                        </li>
+                        </li><br>
+
+                        <li><strong>Habitat and behavior:</strong>
+                            <p>
+                                The Roti Island snake-necked turtle lives in small freshwater swamps and ponds. It is
+                                carnivorous, feeding on fish, insects, and small invertebrates. Unlike many other
+                                turtles,
+                                it is
+                                not a strong swimmer and prefers calm, shallow waters where it can walk along the
+                                bottom.
+                            </p>
+                        </li><br>
 
                         <li>
-                            Conservation status:<br>
-                            This species is Critically Endangered, with its population drastically declining due to
-                            illegal
-                            pet trade and habitat destruction. Because of its exotic appearance, it has been
-                            over-collected
-                            for sale in international markets.
-                        </li>
+                            <strong>Conservation status:</strong>
+                            <p>
+                                This species is Critically Endangered, with its population drastically declining due to
+                                illegal
+                                pet trade and habitat destruction. Because of its exotic appearance, it has been
+                                over-collected
+                                for sale in international markets.
+                            </p>
+                        </li><br>
                     </ul>
 
-                    <strong>Conclusion:</strong><br>
-                    The Roti Island snake-necked turtle is a truly fascinating creature that plays a vital role in
-                    its ecosystem. Its rarity makes it all the more important to protect and preserve for future
-                    generations.
+                    <strong>Conclusion:</strong>
+                    <p>
+                        The Roti Island snake-necked turtle is a truly fascinating creature that plays a vital role in
+                        its ecosystem. Its rarity makes it all the more important to protect and preserve for future
+                        generations.
                     </p>
                 </div>
 
@@ -85,56 +98,77 @@
                     <h2> Saving the Roti Island Snake-Necked Turtle: What We Can Do</h2>
                     <p>
                         The Roti Island snake-necked turtle is in danger of disappearing forever. With only a few known
-                        wild populations left, urgent action is needed to protect this rare species. Here’s how we can
+                        wild populations left, urgent action is needed to protect this rare species. Here is how we can
                         help:
+                    </p><br>
 
                     <ol>
                         <li>
-                            Stop illegal wildlife trade:<br>
-                            One of the main threats to this turtle is its capture for the exotic pet market. Supporting
-                            stronger enforcement of wildlife trade laws and refusing to buy wild-caught animals helps
-                            reduce
-                            demand and protect wild populations.
+                            <strong>Stop illegal wildlife trade:</strong>
+                            <p>
+                                One of the main threats to this turtle is its capture for the exotic pet market.
+                                Supporting
+                                stronger enforcement of wildlife trade laws and refusing to buy wild-caught animals
+                                helps
+                                reduce
+                                demand and protect wild populations.
+                            </p>
+
                         </li><br>
 
                         <li>
-                            Protect natural habitats:<br>
-                            Preserving the wetlands and freshwater ponds of Roti Island is critical. Conservation groups
-                            and
-                            local communities can work together to stop habitat destruction caused by farming,
-                            pollution,
-                            and development.
+                            <strong>Protect natural habitats:</strong>
+                            <p>
+                                Preserving the wetlands and freshwater ponds of Roti Island is critical. Conservation
+                                groups
+                                and
+                                local communities can work together to stop habitat destruction caused by farming,
+                                pollution,
+                                and development.
+                            </p>
+
                         </li><br>
 
                         <li>
-                            Support conservation programs:<br>
-                            Organizations are working to breed the turtles in captivity, monitor wild populations, and
-                            restore natural habitats. Donating to or raising awareness of these programs can directly
-                            support their efforts.
+                            <strong>Support conservation programs:</strong>
+                            <p>
+
+                                Organizations are working to breed the turtles in captivity, monitor wild populations,
+                                and
+                                restore natural habitats. Donating to or raising awareness of these programs can
+                                directly
+                                support their efforts.
+                            </p>
                         </li><br>
 
                         <li>
-                            Educate and advocate:<br>
-                            Many people don’t know this turtle exists. By sharing information, giving talks, or creating
-                            educational content, you can help increase awareness and encourage others to care about its
-                            survival.
+                            <strong>Educate and advocate:</strong>
+                            <p>
+                                Many people do not know this turtle exists. By sharing information, giving talks, or
+                                creating
+                                educational content, you can help increase awareness and encourage others to care about
+                                its
+                                survival.
+                            </p>
                         </li><br>
 
                         <li>
-                            Encourage sustainable development:<br>
-                            Helping communities on Roti Island find ways to earn a living that don’t harm the
-                            environment, like eco-tourism or sustainable agriculture—can protect turtle habitats in the
-                            long
-                            run.
+                            <strong>Encourage sustainable development:</strong>
+                            <p>
+
+                                Helping communities on Roti Island find ways to earn a living that do not harm the
+                                environment, like eco-tourism or sustainable agriculture can protect turtle habitats in
+                                the
+                                long
+                                run.
+                            </p>
                         </li><br>
                     </ol>
 
-                    <strong>Conclusion:</strong><br>
-                    The Roti Island snake-necked turtle is a one-of-a-kind species worth saving. With global
-                    cooperation and community involvement, we can help ensure this fascinating turtle continues to
-                    exist in the wild.
-
-                    </p>
+                    <strong>Conclusion:</strong>
+                    <p>The Roti Island snake-necked turtle is a one-of-a-kind species worth saving. With global
+                        cooperation and community involvement, we can help ensure this fascinating turtle continues to
+                        exist in the wild.</p>
                 </div>
             </div>
         </div>
